# meow88x31

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/meow88x31/: cli.py  interact.py
src/meow88x31/animations/: __init__.py  base.py  blink.py  blossom.py  rainbow.py  scanline.py  snow.py  typing.py  wave.py
src/meow88x31/core/: badge.py  frame.py  text.py
src/meow88x31/flags/: __init__.py  palettes.py
src/meow88x31/styles/: __init__.py  base.py  classic.py  double.py  flat.py  groove.py  none.py  raised.py
src/meow88x31/utils/: colors.py  fonts.py
